clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_special_parameters.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1619
expression: "test_tokenizer(\"$$\")?"
---
TokenizerResult(
  input: "$$",
  result: [
    Word("$$", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 2,
        line: 1,
        column: 3,
      ),
    )),
  ],
)
