clash-brush-parser/src/snapshots/clash_brush_parser__tokenizer__tests__tokenize_unbraced_parameter_expansion-2.snap
---
source: clash-brush-parser/src/tokenizer.rs
assertion_line: 1630
expression: "test_tokenizer(\"a$x\")?"
---
TokenizerResult(
  input: "a$x",
  result: [
    Word("a$x", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 3,
        line: 1,
        column: 4,
      ),
    )),
  ],
)
